[gd_scene load_steps=11 format=2]

[ext_resource path="res://asset/entrada/0entrada.gd" type="Script" id=1]
[ext_resource path="res://asset/entrada/limon.png" type="Texture" id=2]
[ext_resource path="res://asset/entrada/1280x720fondo-entrada22.jpg" type="Texture" id=3]
[ext_resource path="res://asset/entrada/cabeza_a.png" type="Texture" id=4]
[ext_resource path="res://asset/entrada/narra-entradaW.wav" type="AudioStream" id=5]
[ext_resource path="res://asset/entrada/narra-respuW.wav" type="AudioStream" id=6]
[ext_resource path="res://asset/entrada/golpeW.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/entrada/mar1.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 645, -146 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Sprite2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/Sprite3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/Sprite3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.161993, 0.185935 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer/Sprite3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1094, 606 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimationPlayer/golpe:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "animalimon"
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 645, -146 ), Vector2( 663, 106 ), Vector2( 842, 78 ), Vector2( 1054, 683 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimationPlayer/Sprite2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer/Sprite2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1.03, 1.03 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer/Sprite3:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/Sprite3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 2.2, 8.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -0.161993, 0.185935 ), Vector2( -0.581184, 0.66633 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimationPlayer/Sprite3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 2, 8.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1094, 606 ), Vector2( 771, 367.47 ) ]
}

[node name="entra" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 10, 10 )

[node name="Label" type="Label" parent="Node2D"]
visible = false
margin_left = 10.6
margin_top = 8.4
margin_right = 56.6
margin_bottom = 22.4
text = "Markuk"

[node name="Timer" type="Timer" parent="."]
wait_time = 19.0
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/animalimon = SubResource( 2 )

[node name="golpe" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 7 )
volume_db = -32.0

[node name="TimerGolpe" type="Timer" parent="AnimationPlayer/golpe"]
wait_time = 0.6
one_shot = true
autostart = true

[node name="mar" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="TimerMar" type="Timer" parent="AnimationPlayer/mar"]
wait_time = 0.8
one_shot = true
autostart = true

[node name="resp" type="AudioStreamPlayer" parent="AnimationPlayer"]
stream = ExtResource( 6 )
volume_db = -20.0

[node name="Node2D2" type="Node2D" parent="AnimationPlayer"]
position = Vector2( 600, 309 )
scale = Vector2( 10, 10 )

[node name="Label" type="Label" parent="AnimationPlayer/Node2D2"]
visible = false
margin_left = 17.4
margin_top = 9.5
margin_right = 63.4
margin_bottom = 23.5
text = "Markuk"

[node name="Sprite2" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 637, 224 )
texture = ExtResource( 4 )

[node name="Sprite3" type="Sprite" parent="AnimationPlayer"]
visible = false
position = Vector2( 1094, 606 )
scale = Vector2( -0.161993, 0.185935 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="AnimationPlayer"]
position = Vector2( 645, -146 )
texture = ExtResource( 2 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="AnimationPlayer/golpe/TimerGolpe" to="." method="_on_TimerGolpe_timeout"]
[connection signal="finished" from="AnimationPlayer/mar" to="." method="_on_mar_finished"]
[connection signal="timeout" from="AnimationPlayer/mar/TimerMar" to="." method="_on_TimerMar_timeout"]
[connection signal="finished" from="AnimationPlayer/resp" to="." method="_on_resp_finished"]
